Finish toTextBlock description