@@ -1,22 +1,7 @@
 # Java Records - Records.toTextBlock
 
-Let's enhance the upcoming Java programming language enhancement `record`.
-Records are described in [JEP 359(Preview)](https://openjdk.java.net/jeps/359) (follow-up to [JEP draft(Second Preview)](https://openjdk.java.net/jeps/8242303)) and by Brian Goetz in [Data Classes and Sealed Types for Java](https://cr.openjdk.java.net/~briangoetz/amber/datum.html).
-Looking forward to the Java release, that doesn't mandate the `--enable-preview` switch to use records anymore.
-
-Starting with mini series about `record`s, I propose new methods to be added to the `java.lang.Record` type.
-Or, these new methods can also reside in a `java.util.Records` helper taking the record object as a first parameter.
-Yes, an externally hosted `Records` helper class is probably the best target.
-For the time being.
-
-**Beware!**
-
-> ⚠ ["Records are addictive!!"](https://twitter.com/delabassee/status/1255497443568955397)
->
-> _David Delabassée_
-
-Sources can be found and copied from the [records](../demo/test/records) package.
-[Feedback](https://github.com/sormuras/sormuras.github.io/issues) on the ideas and the code is much appreciated. 
+Let's enhance the upcoming Java programming language enhancement `record` with a `toTextBlock` method.
+This is the second part of the mini series about `record`s.
 
 #### Proposed Methods
 
@@ -26,7 +11,7 @@ Sources can be found and copied from the [records](../demo/test/records) package
 ## `Records.toTextBlock(Record)`
 
 For record types, a `public String toString()` method implementation is generated for us.
-It returns a "string representation of all the record components, with their names".
+It returns a _"string representation of all the record components, with their names"_.
 That's nice.
 All in one line.
 That's not so nice.
@@ -34,22 +19,22 @@ Especially when your record contains many components.
 And components are sometimes records, as well.
 Thus, their components contribute to the same line.
 
-The proposed `Records.toTextBlock()` method also produces a string representation.
+The proposed `Records.toTextBlock(Record)` method also produces a string representation.
 But with new line separators and tab characters inserted to achieve a tree-like view of all record components.
 
-### Example for Record#toTextBlock()
+### Pseudo-Code Usage Sample
 
 Given the record declartion `R`:
 ```
 record R(T0 n0, T1 n1, ... Tn nn) {}
 ```
 
-Then `toString()` produces:
+The generated `toString()` method produces:
 ```
-"R[n0=v0, n1=v1, ... nn=vn]" // produced by toString()
+"R[n0=v0, n1=v1, ... nn=vn]"
 ```
 
-The string representation produced by `toTextBlock()` looks like:
+The string representation produced by `toTextBlock(Record)` looks like:
 ```
 """ 
 R
@@ -61,4 +46,26 @@ R
 ```
 
 Values of type record are printed as indented text blocks.
-Values that are of type `java.util.Collection<? extends Record>` could also be unrolled.
+Let's assume that type `T2` is declared as a `record`.
+
+While `Record.toString()` represents that within the same line:
+
+```
+"R[n0=v0, n1=v1, n2=T2[nA=w0, nB=w1, ..., nz=wz] ... nn=vn]"
+```
+
+```
+R
+\tn0 = v0
+\tn1 = v1
+\tn2 = T2
+\t\tnA = w0
+\t\tnB = w1
+...
+\tnn = vn
+"""
+```
+
+### Proof Of Concept Implementation
+
+_TODO_
